@@ -1,3 +1,9 @@
+2002-04-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tclCmdIL.c (InfoBodyCmd): 
+	* tests/info.test (info-2.6): Proc bodies without string reps
+	would report as empty [Bug #545644]
+
 2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>
 
 	* generic/tclNamesp.c:
